Tue Oct 07 08:49:51 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Now using signals to remove code duplicate between QGaimBuddyList
	    and QGaimBListWindow.

Mon Oct 06 22:05:31 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Appended a Slot suffix to some slot functions. I don't feel
	    like updating the rest of qpe-gaim yet.

Mon Oct 06 20:44:46 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added a convenience function to QGaimBuddyList that returns the
	    selected buddy, taking into account contacts.

Mon Oct 06 20:33:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - The IM item in the context-sensitive menu for buddies and contacts
	    now works.

Mon Oct 06 19:09:23 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimNotify.cpp:
	* src/QGaimNotify.h:
	  - Added the UI for the notify formatted dialog.

Mon Oct 06 16:22:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added support for Get User Info. There's just no UI for displaying
	    it, yet :)

Mon Oct 06 01:48:03 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	  - Added a throbber for each protocol icon in the accounts window.
	    When an account is signing on, the protocol icon will grey in,
	    grey out.. throbby action!

Mon Oct 06 00:41:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - The icons in the conversations drop-down menu now show buddy
	    status.

Mon Oct 06 00:38:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Fixed scaling of emblems in the buddy list.
